crates/temper-services/tests/compile_fail/call_admin_fn_without_proof.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/call_admin_fn_without_proof.rs:10:48
   |
10 |     let _ = access_service::admin_revoke(pool, subject, subject, String::new()).await;
   |             ----------------------------       ^^^^^^^ expected `&SystemAdmin`, found `ProfileId`
   |             |
   |             arguments to this function are incorrect
   |
note: function defined here
  --> src/services/access_service.rs
   |
   | pub async fn admin_revoke(
   |              ^^^^^^^^^^^^
